Style navbar and footer container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,9 @@ body {
   margin: 0;
   text-align: center;
 
-
 }
+
+/* Headings */
 
 h1 {
   font-family: 'VT323', monospace;
@@ -31,4 +32,31 @@ h2 {
 p {
   font-family: 'Quicksand', sans-serif;
   font-size: 15px;
+}
+
+/* Navigation bar + footer container */
+
+.nav-container,
+.footer-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.nav-container {
+  top: 0;
+}
+
+.footer-container {
+  bottom: 0;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  height: 80px;
+  padding: 50px;
 }
