--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,46 @@ nav {
     font-size: large;
     cursor: pointer;
   }
+
+  /* Video and overlay */
+.video-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .video-container video {
+  
+    min-width: 100%;
+    min-height: 100%;
+  
+  
+    width: auto;
+    height: auto;
+  
+  
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .story {
+    height: 520px;
+    overflow-y: auto;
+    margin: auto;
+  }
+  
+  
+  .overlay {
+    color: white;
+    position: absolute;
+    width: 80%;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    z-index: 1;
+  }
