--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,3 +119,45 @@ nav {
     transform: translate(50%, -50%);
     z-index: 1;
   }
+
+  /* Buttons */
+
+#button1 {
+    width: 200px;
+    font-size: 22px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    font-family: 'VT323', monospace;
+    text-transform: uppercase;
+  }
+  
+  
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  
+  .button {
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+  
+  .removed {
+    display: none;
+  }
+  
+  
+  .hidden {
+    visibility: hidden;
+  }
+  
+  
+  .show {
+    visibility: visible;
+  }
+  
+  
