Update readme, index, css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,8 @@ nav {
   .home-button {
     font-size: large;
     cursor: pointer;
+    background-color: transparent;
+    border: none;
   }
 
   /* Video and overlay */
