--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ body {
 
 }
 
+#picture {
+  height: 200px;
+  width: 200px;
+}
+
 /* Headings */
 
 h1 {
@@ -117,7 +122,7 @@ nav {
   
   .story {
     height: 520px;
-    overflow-y: auto;
+    overflow-y: scroll;
     margin: auto;
   }
   
@@ -134,10 +139,12 @@ nav {
 
   /* Buttons */
 
-#button1 {
+#button1,
+#button2,
+#button3 {
     width: 200px;
     font-size: 22px;
-    padding: 10px;
+    padding: 5px;
     border: none;
     cursor: pointer;
     font-family: 'VT323', monospace;
