--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,18 @@ nav {
     height: 500px;
     overflow-y: scroll;
     margin: auto;
+    
   }
+/* Hide scrollbar for Chrome, Safari and Opera */
+  .story::-webkit-scrollbar {
+    display: none;}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.story {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
   
   
   
