--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-
+/* Box-sizing */
 * {
   box-sizing: border-box;
 }
 
-
+/* Body */
 body {
   padding: 0;
   margin: 0;
@@ -14,6 +14,7 @@ body {
 
 }
 
+/* Picture */
 #picture {
   height: 200px;
   width: 200px;
@@ -38,6 +39,7 @@ p {
   font-family: 'Quicksand', sans-serif;
   font-size: 15px;
 }
+
 
 /* Navigation bar + footer container */
 
@@ -66,7 +68,7 @@ nav {
   padding: 50px;
 }
 
-/* Brand logo */
+
 .brand {
     font-size: 24px;
     font-family: 'VT323', monospace;
@@ -76,7 +78,7 @@ nav {
     color: white;
   }
 
-/* Icons on the right */
+
 .icons {
     display: flex;
     justify-content: space-between;
@@ -94,7 +96,8 @@ nav {
     border: none;
   }
 
-  /* Video and overlay */
+  
+/* Video and overlay */
 .video-container {
     position: absolute;
     top: 0;
